Modify GitHub Actions workflow to remove package install
Removed package installation and added a test echo command.

--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -24,8 +24,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          sudo pacman -Syu --noconfirm switch-tools switch-libtesla
-
+          echo test 
+          
       - name: Build project
         run: |
           make all
