--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -5,7 +5,6 @@ on:
     branches: [ main, master ]
   pull_request:
     branches: [ main, master ]
-  workflow_dispatch:
 
 jobs:
   build:
@@ -17,23 +16,16 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: recursive
-          fetch-depth: 0
 
       - name: Mark git repository as safe
         run: git config --global --add safe.directory $PWD
 
-      - name: Install dependencies
-        run: |
-          echo test 
-          
-      - name: Build project
+      - name: Build
         run: |
           make all
 
-      - name: Upload Build Artifact
+      - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: NX-FanControl-Overlay
-          path: |
-            *.ovl
-            *.nro
+          name: NX-FanControl-Package
+          path: out/
